# MineCweeper

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
